# finance-dashboard-backend-assignment

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1ec7314b947f_initial_tables.py
backend/: main.py
backend/api/: dependencies.py  rbac.py
backend/api/middleware/: request_logger.py
backend/api/routes/: auth_routes.py  finance_routes.py  summary_routes.py  user_routes.py
backend/core/: config.py  exceptions.py  logging_config.py  rate_limiter.py  security.py
backend/db/: base.py  seed.py  session.py
backend/models/: __init__.py  finance.py  user.py
backend/schemas/: finance.py  user.py
backend/services/: finance_service.py  summary_service.py  user_service.py
backend/utils/: helpers.py
tests/: conftest.py  test_finance_features.py
